[gd_scene load_steps=9 format=3 uid="uid://bqig0to8sqgr6"]

[ext_resource type="Script" path="res://Scripts/pyShaderTest.gd" id="1_pg50a"]
[ext_resource type="Material" uid="uid://do4awwvrvv8bk" path="res://Material/player.material" id="2_06yvt"]
[ext_resource type="Script" path="res://Scripts/cat_vf.gd" id="3_dfpd6"]
[ext_resource type="Texture2D" uid="uid://u7xuut8gfxao" path="res://Sprites/nyan_sheet.png" id="3_j65nc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hi1ya"]
size = Vector2(95.7203, 104.139)

[sub_resource type="Animation" id="Animation_i1x1x"]
resource_name = "run"
length = 0.3
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8o14m"]
_data = {
"run": SubResource("Animation_i1x1x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j827o"]
size = Vector2(216, 212)

[node name="Dtct_stat" type="Node2D"]
texture_filter = 1
position = Vector2(172, 106)
scale = Vector2(0.25, 0.25)

[node name="rcv" type="Area2D" parent="."]
script = ExtResource("1_pg50a")

[node name="cat" type="Sprite2D" parent="rcv"]
texture_filter = 1
material = ExtResource("2_06yvt")
scale = Vector2(0.685, 0.685)
texture = ExtResource("3_j65nc")
hframes = 5
script = ExtResource("3_dfpd6")

[node name="rcv_col" type="CollisionShape2D" parent="rcv"]
position = Vector2(-0.0114354, 0.0698483)
rotation = -0.00290892
shape = SubResource("RectangleShape2D_hi1ya")
debug_color = Color(0.698039, 0.301961, 0.968627, 0.419608)

[node name="Timer" type="Timer" parent="rcv"]
wait_time = 0.3

[node name="player_anim" type="AnimationPlayer" parent="rcv"]
autoplay = "run"
libraries = {
"": SubResource("AnimationLibrary_8o14m")
}

[node name="pub" type="Area2D" parent="."]
monitoring = false

[node name="col" type="CollisionShape2D" parent="pub"]
shape = SubResource("RectangleShape2D_j827o")
debug_color = Color(0.207843, 0.603922, 0.596078, 0.419608)

[connection signal="area_entered" from="rcv" to="rcv" method="_on_area_entered"]
[connection signal="area_exited" from="rcv" to="rcv" method="_on_area_exited"]
[connection signal="input_event" from="rcv" to="rcv" method="_on_input_event"]
[connection signal="mouse_entered" from="rcv" to="rcv" method="_on_mouse_entered"]
[connection signal="timeout" from="rcv/Timer" to="rcv" method="_on_timer_timeout"]
[connection signal="timeout" from="rcv/Timer" to="rcv/cat" method="_on_timer_timeout"]
